# data-processing

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  docker-compose.test.yml  docker-compose.tracing.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-tracing.txt  requirements.txt  service-manifest.yaml  specs.lock.json
.github/workflows/: build.yml  deploy-prod.yml  deploy-staging.yml  deploy-with-strategy.yml  security-scan.yml  test.yml
base/: base_processor.py  exceptions.py
config/: default.env.example  logging.yaml  metrics.yaml
docs/: api.md  architecture.md  deployment.md  monitoring.md  phase5-implementation-summary.md  production-deployment-guide.md  troubleshooting.md
docs/performance/: performance-baselines.md
docs/runbooks/: common-issues.md  disaster-recovery-procedures.md  performance-troubleshooting.md  projection_smoke_test.md  security-incident-response.md
docs/security/: security-procedures.md
fixtures/: reporting_figures.json  reporting_templates.json
helm/: Chart.yaml  values.yaml
helm/charts/: kafka-22.1.2.tgz
helm/templates/: _helpers.tpl  aggregation-service.yaml  canary-normalization.yaml  clickhouse-migrations-configmap.yaml  clickhouse-migrations-job.yaml  configmap.yaml  enrichment-service.yaml  hpa.yaml  jaeger.yaml  network-policies.yaml  normalization-service.yaml  normalize-ticks-service.yaml  pdb.yaml  projection-service.yaml  secret.yaml  service-template.yaml
hydro/: __init__.py  mass_balance.py  preprocessor.py
infrastructure/flagger/: install.sh  metric-templates.yaml
infrastructure/linkerd/: install.sh  linkerd-config.yaml
infrastructure/postgres/: pgbouncer-config.ini  pgbouncer-deployment.yaml
infrastructure/pyroscope/: deployment.yaml
infrastructure/redis/: cluster-config.yaml
infrastructure/velero/: backup-schedules.yaml  install.sh
k8s/: refdata-normalizer-deployment.yaml  refdata-projector-deployment.yaml
migrations/: migrate.py
migrations/clickhouse/: 001_init_silver.sql  004_curves_schema.sql  005_served_views.sql  006_audit_events.sql  007_query_optimization_indexes.sql  008_optimized_materialized_views.sql  009_performance_indexes.sql  010_materialized_views.sql  011_served_reference_instruments.sql  012_analytics_curve_base.sql  013_wecc_topology_schemas.sql  014_gold_schemas.sql  015_assets_schemas.sql  015_task_manager_schemas.sql  016_transmission_schemas.sql  017_rps_schemas.sql  018_ghg_schemas.sql  019_der_schemas.sql
migrations/postgres/: 001_taxonomy_tables.sql  002_dimension_indexes.sql  003_api_keys.sql  004_performance_indexes.sql
monitoring/: alert_rules.yml  certificate_alerts.yml  prometheus.yml  sla_alerts.yml
monitoring/grafana/: business_dashboard.json  cost_dashboard.json  performance_dashboard.json  security_dashboard.json  tenant_dashboard.json  tracing-dashboard.json
normalizers/: README.md  caiso_oasis_normalizer.py  edam_enricher.py  pipeline.py
reference/assets/: resource_registry_loader.py
reference/topology_mappings/: ercot_ba_zones.csv  miso_ba_zones.csv  wecc_ba_zones.csv
reference/transmission/: wecc_paths_loader.py
scripts/: backfill_window.py  deploy_blue_green.sh  deploy_canary.sh  generate-ca-certs.sh  generate_manifest_index.py  generate_sample_data.py  load_test_data.py  rebuild_projection.py  run-performance-tests.sh  run_integration_tests.py  run_local_consumer.py  security-scan.sh  setup_monitoring.py  test_integration_simple.py  test_monitoring.py  validate_schemas.py
service-aggregation/: Dockerfile  requirements.txt  service-manifest.yaml
service-aggregation/app/: __init__.py  config.py  main.py
service-enrichment/: Dockerfile  service-manifest.yaml
service-enrichment/app/: __init__.py  config.py  main.py
service-normalization/: Dockerfile  requirements.txt  service-manifest.yaml
service-normalization/app/: __init__.py  config.py  main.py  refdata_normalizer.py
service-normalization/program_mvp/: ba_zone_enrichment.py
service-projection/: Dockerfile  requirements.txt  service-manifest.yaml
service-projection/app/: __init__.py  config.py  main.py  refdata_projector.py
service-topology/: Dockerfile  requirements.txt  service-manifest.yaml
service-topology/app/: __init__.py  ercot_topology.py  main.py  miso_topology.py  models.py  publisher.py  wecc_topology.py
service-topology/published/: ercot_topology.json  miso_topology.json  wecc_topology.json
services/: __init__.py
services/cache-updater/: __init__.py  market_latest_cache.py
services/normalize-ticks/: Dockerfile  __init__.py  requirements.txt  service-manifest.yaml
services/program-metrics-loader/: README.md  __init__.py  loader.py
shared/: __init__.py
shared/framework/: __init__.py  api_key_endpoints.py  auth.py  batch_config.py  cache.py  cache_invalidation.py  cache_metrics.py  cert_metrics.py  circuit_breaker.py  compression.py  config.py  consumer.py  graceful_shutdown.py  health.py  kafka_optimization.py  metrics.py  mtls_client.py  pool_metrics.py  producer.py  query_analyzer.py  query_cache.py  service.py  tracing.py  tracing_middleware.py
shared/schemas/: __init__.py  events.py  models.py  registry.py
shared/security/: __init__.py  audit_logging.py  cert_validation.py  encryption.py  middleware.py  mtls.py  owasp_headers.py  rate_limiting.py  service_identity.py  tls_config.py
shared/storage/: __init__.py  clickhouse.py  clickhouse_batch_writer.py  postgres.py  redis.py
shared/utils/: __init__.py  audit.py  errors.py  identifiers.py  logging.py  tracing.py
sql/clickhouse/: assets_schemas.sql  der_schemas.sql  ghg_schemas.sql  gold_schemas.sql  markets_program_schemas.sql  rps_schemas.sql  served_market_ticks.sql  served_reference_instruments.sql  task_manager_schemas.sql  topology_schemas.sql  transmission_schemas.sql
tests/: conftest.py  test_sample_data_generator.py
tests/chaos/: run_chaos_tests.py
tests/deployment/: zero_downtime_tests.py
tests/disaster_recovery/: disaster_recovery_tests.py
tests/fixtures/: mock_services.py  sample_events.py
(+109 files in other folders)
